2004-06-25  Atsushi Enomoto <atsushi@ximian.com>

	* RdpContentType.cs, RdpNameClass.cs, RdpObjects.cs, RdpPatterns.cs,
	  Util.cs : added novell license term.

2004-06-21  Atsushi Enomoto <atsushi@ximian.com>

	* RdpPatterns.cs : Fixed ExpandRef() that caused incorrect nest error.

2004-06-17  Atsushi Enomoto <atsushi@ximian.com>

	* RdpPatterns.cs : Quick workaround for infinite loop happening in
	  some kind of recursive expansion.

2004-03-12  Atsushi Enomoto <atsushi@ximian.com>

	* RdpPatterns.cs : Fixed TextDeriv() to allow whitespace text nodes
	  except for Data and Value (though they are overridden).

2004-02-25  Atsushi Enomoto <atsushi@ximian.com>

	* Added RdpContextType.cs.
	* RdpNameClasses.cs,
	  RdpObjects.cs,
	  RdpPatterns.cs,
	  Util.cs : radical design change (too many things to write up).

2003-05-19  Atsushi Enomoto <ginga@kit.hi-ho.ne.jp>

	* RdpPattern.cs : Some method name capitalization.
	  Fixed RdpInterleave.StartTagOpenDeriv() which is logically incorrect.

2003-05-05  Atsushi Enomoto <ginga@kit.hi-ho.ne.jp>

	* RdpPattern.cs : added RdpAttribute.expandRef(). UnresolvedRef had
	  remained in attribute patterns.

2003-04-29  Atsushi Enomoto <ginga@kit.hi-ho.ne.jp>

	* Started.
	* added ChangeLog, RdpNameClasses.cs, RdpObjects.cs, RdpPatterns.cs
	  and Util.cs.
