@@ -1,3 +1,7 @@
+2004-12-05  Atsushi Enomoto <atsushi@ximian.com>
+
+	* RdpPattern.cs : added GetLabels().
+
 2004-06-25  Atsushi Enomoto <atsushi@ximian.com>
 
 	* RdpContentType.cs, RdpNameClass.cs, RdpObjects.cs, RdpPatterns.cs,
